--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 *.pyc
 *.pyo
 .idea
+local_settings.py
+product/__pycache__/
+product/migrations/__pycache__/
+test_task/__pycache__/
+test_task/local_settings.py
+mydatabase
